04_service_mesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intro-k8s
  labels:
    istio-injection: enabled
