04_service_mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: intro-k8s
spec:
  hosts:
    - "httpbin.jozhe.com"
  gateways:
    - istio-system/jozhe-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: httpbin
            port:
              number: 80
